AC_INIT(mpi.cmod)

AC_CONFIG_HEADER(config.h)

AC_MODULE_INIT()

AC_SUBST(AUTO)

if test "x$with_MPI" == "xyes"
then
    AC_MSG_CHECKING(whether MPI is present)
    AC_TRY_RUN([
#include "mpi.h"

    int main(int argc, char **argv)
    {
	MPI_Comm c;

	return 0;
    }
	],
	AC_MSG_RESULT(yes)
	AC_DEFINE(HAS_MPI, 1, [Whether MPI is available])
	LIBS="${LIBS-} -lmpi",
	AC_MSG_RESULT(no)
    )
fi

AC_OUTPUT(Makefile,echo FOO >stamp-h )


