# $Id$
AC_INIT(math_module.c)
AC_CONFIG_HEADER(config.h)
AC_ARG_WITH(fftw,     [  --with(out)-fftw       Support for fftw],[],[with_fftw=yes])

AC_MODULE_INIT()

PIKE_FEATURE_OK(Math.)

AC_C_CHAR_UNSIGNED

if test x$with_fftw = xyes ; then
  dnl Checks for header files.

  PIKE_FEATURE(Math.Transforms.FFT,[no (fftw.h not found)])

  AC_CHECK_HEADERS(fftw.h)
  AC_CHECK_HEADERS(rfftw.h)

  if test "$ac_cv_header_rfftw_h" = "yes"; then
    dnl Checks for libraries.

    PIKE_FEATURE(Math.Transforms.FFT,[no (fftw libraries not found)])

    AC_CHECK_LIB(fftw, fftw,,,-lm)
    AC_CHECK_LIB(rfftw, rfftw,,,-lm)

    if test "$ac_cv_lib_rfftw_rfftw" = "yes" -a \
            "$ac_cv_lib_fftw_fftw" = "yes"; then
        PIKE_FEATURE(Math.Transforms.FFT,[yes])
    fi
  fi
fi

AC_OUTPUT(Makefile,echo FOO >stamp-h )
