# $Id: configure.in,v 1.5 2001/03/26 15:27:30 mirar Exp $
AC_INIT(mird_glue.c)
AC_CONFIG_HEADER(config.h)

AC_SET_MAKE

AC_MODULE_INIT()

dnl check for mird.h and new enough symbol in libmird

AC_CHECK_HEADERS(mird.h)
AC_CHECK_LIB(mird,mird_sync) 

if test "x$ac_cv_header_mird_h" != "xyes" -o "x$ac_cv_lib_mird_mird_sync" != "xyes"; then
	PIKE_FEATURE(Mird,[yes (builtin libmird)])
	AC_CONFIG_SUBDIRS(libmird)
	MODULE_SUBDIRS=libmird
	MODULE_ARCHIVES=libmird/libmird.a

	CPPFLAGS='-I./libmird'" ${CPPFLAGS}"
	AC_DEFINE(HAVE_LIBMIRD)
	AC_DEFINE(HAVE_MIRD_H)
else
	PIKE_FEATURE(Mird,[yes (system libmird)])
fi

AC_SUBST(CPPFLAGS)
AC_SUBST(MODULE_SUBDIRS)
AC_SUBST(MODULE_ARCHIVES)

AC_SUBST(RANLIB)

AC_OUTPUT(Makefile,echo FOO >stamp-h )
