# $Id$
AC_INIT(mird_glue.c)
AC_CONFIG_HEADER(config.h)

AC_SET_MAKE

AC_MODULE_INIT()

dnl check for mird.h and new enough symbol in libmird

AC_CHECK_HEADERS(mird.h)
AC_CHECK_LIB(mird,mird_sync) 

if test "x$ac_cv_header_mird_h" != "xyes" -o "x$ac_cv_lib_mird_mird_sync" != "xyes"; then

  AC_MSG_CHECKING(if we can build libmird on this system)
  AC_CACHE_VAL(pike_cv_nice_mird_system,
  	      [pike_cv_nice_mird_system=no;
  	       AC_TRY_RUN([
#include <unistd.h>
#include <sys/types.h>
#include <sys/file.h>
#include <fcntl.h>
int main() 
{
int fd;
fd=open("conftest.tmp",O_CREAT|O_TRUNC|O_APPEND|O_RDWR,0666);
write(fd,"hejsan",3);
close(fd);
return 0;
}],
  	      [mird_cv_nice_mird_system=yes],[:],[:])])
  AC_MSG_RESULT($mird_cv_nice_mird_system)

  if test "x$mird_cv_nice_mird_system" != "xyes"; then
     PIKE_FEATURE(Mird,[no (no system libmird, can not use included)])
  else
    PIKE_FEATURE(Mird,[yes (included libmird)])
    AC_CONFIG_SUBDIRS(libmird)
    MODULE_SUBDIRS=libmird
    MODULE_ARCHIVES=libmird/libmird.a
    
    CPPFLAGS='-I./libmird'" ${CPPFLAGS}"
    AC_DEFINE(HAVE_LIBMIRD)
    AC_DEFINE(HAVE_MIRD_H)
  fi
else
  PIKE_FEATURE(Mird,[yes (system libmird)])
fi

AC_SUBST(CPPFLAGS)
AC_SUBST(MODULE_SUBDIRS)
AC_SUBST(MODULE_ARCHIVES)

AC_SUBST(RANLIB)

AC_OUTPUT(Makefile,echo FOO >stamp-h )
