# $Id$
AC_INIT(mird_glue.c)
AC_CONFIG_HEADER(config.h)

AC_SET_MAKE

AC_MODULE_INIT()

dnl check for mird.h and new enough symbol in libmird

AC_CHECK_HEADERS(mird.h)
AC_CHECK_LIB(mird,mird_sync) 

if test "x$ac_cv_header_mird_h" != "xyes" -o "x$ac_cv_lib_mird_mird_sync" != "xyes"; then

   PIKE_FEATURE(Mird,[no (libmird/mird.h not found)])

dnl   AC_MSG_CHECKING(if we can build libmird on this system)
dnl   AC_CACHE_VAL(pike_cv_nice_mird_system,
dnl   	      [pike_cv_nice_mird_system=no;
dnl   	       AC_TRY_RUN([
dnl #include <unistd.h>
dnl #include <sys/types.h>
dnl #include <sys/file.h>
dnl #include <fcntl.h>
dnl int main() 
dnl {
dnl int fd;
dnl fd=open("conftest.tmp",O_CREAT|O_TRUNC|O_APPEND|O_RDWR,0666);
dnl write(fd,"hejsan",3);
dnl close(fd);
dnl return 0;
dnl }],
dnl   	      [mird_cv_nice_mird_system=yes],[:],[:])])
dnl   AC_MSG_RESULT($mird_cv_nice_mird_system)
dnl 
dnl   if test "x$mird_cv_nice_mird_system" != "xyes"; then
dnl      PIKE_FEATURE(Mird,[no (no system libmird, can not use included)])
dnl   else
dnl     PIKE_FEATURE(Mird,[yes (included libmird)])
dnl     AC_CONFIG_SUBDIRS(libmird)
dnl     MODULE_SUBDIRS=libmird
dnl     MODULE_ARCHIVES=libmird/libmird.a
dnl     
dnl     CPPFLAGS='-I./libmird'" ${CPPFLAGS}"
dnl     AC_DEFINE(HAVE_LIBMIRD)
dnl     AC_DEFINE(HAVE_MIRD_H)
dnl   fi

else
   PIKE_FEATURE(Mird,[yes (system libmird)])
fi

AC_SUBST(CPPFLAGS)
AC_SUBST(MODULE_SUBDIRS)
AC_SUBST(MODULE_ARCHIVES)

AC_SUBST(RANLIB)

AC_OUTPUT(Makefile,echo FOO >stamp-h )
